--- a/src/blog/static/blog/css/blog.css
+++ b/src/blog/static/blog/css/blog.css
@@ -89,9 +89,21 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .25rem;
   font-size: 2.5rem;
 }
+
+.blog-post-subtitle {
+  margin-bottom: .25rem;
+  font-size: 1.5rem;
+  font-style: italic;
+  color: #424242;
+}
 .blog-post-meta {
   margin-bottom: 1.25rem;
   color: #727272;
+}
+
+.blog-post-content {
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 /*
