--- a/src/blog/templates/base.html
+++ b/src/blog/templates/base.html
@@ -6,9 +6,9 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.88.1">
+    <meta name="description" content="The Game">
+    <meta name="author" content="albert752">
+    <meta name="generator" content="">
     <title>Distorsió</title>
 
     
@@ -17,16 +17,17 @@
     {% bootstrap_css %}
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#7952b3">
+    <link rel="apple-touch-icon" href="{% static 'blog/img/favicon-180x180.png' %}" sizes="180x180">
+    <link rel="icon" href="{% static 'blog/img/favicon-32x32.png' %}" sizes="32x32" type="image/png">
+    <link rel="icon" href="{% static 'blog/img/favicon-16x16.png' %}" sizes="16x16" type="image/png">
+    <link rel="icon" href="{% static 'blog/img/favicon.ico' %}">
+    <meta name="theme-color" content="#0f4d13">
 
 
     <style>
+      header {
+        background-image: url("{% static 'blog/img/header.png' %}");
+      }
       @font-face {
         font-family: 'Swis721BlkExBT';
         src: local('Swis721BlkExBT'),
@@ -53,27 +54,16 @@
     <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
   </head>
   <body>
-    
-<div class="container">
-  <header class="blog-header py-3">
-    <div class="row flex-nowrap justify-content-between align-items-center">
-      <div class="col-4 pt-1">
-        <a class="link-secondary" href="#">Subscribe</a>
-      </div>
-      <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="{% url 'home' %}">Distorsió</a>
-        <a class="blog-sub-header-logo text-dark" href="{% url 'home' %}">La revista dels estudiants de l'ETSETB</a>
-      </div>
-      <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="link-secondary" href="#" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"></circle><path d="M21 21l-5.2-5.2"></path></svg>
-        </a>
-        <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
-      </div>
+<header class="blog-header py-4">
+  <div class="row flex-nowrap justify-content-between align-items-center">
+    <div class="col text-center">
+      <a class="blog-header-logo text-light" href="{% url 'home' %}">Distorsió</a> <br>
+      <a class="blog-sub-header-logo text-light" href="{% url 'home' %}">La revista dels estudiants de l'ETSETB</a>
     </div>
-  </header>
-
-  <ul class="nav nav-pills flex-column flex-sm-row">
+  </div>
+</header>
+<div class="container">
+  <ul class="nav nav-pills flex-column flex-sm-row ">
     <li class="flex-sm-fill  nav-item">
       <a class="nav-link" href="{% url 'home' %}">Inici</a>
     </li>
@@ -140,10 +130,10 @@
     <div class="col-md-4">
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
-          <h4 class="fst-italic">About</h4>
-          <p class="mb-0">Customize this section to tell your visitors a
- little bit about your publication, writers, content, or something else 
-entirely. Totally up to you.</p>
+          <h4 class="fst-italic">Bocamoll</h4>
+          <p class="mb-0">
+            Aquí hi haurà un bocamoll random
+          </p>
         </div>
 
         <div class="p-4">
@@ -165,11 +155,11 @@ entirely. Totally up to you.</p>
         </div>
 
         <div class="p-4">
-          <h4 class="fst-italic">Elsewhere</h4>
+          <h4 class="fst-italic">Novotech</h4>
           <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.instagram.com/distorsioupc/">Instagram</a></li>
+            <li><a href="https://twitter.com/distorsioupc">Twitter</a></li>
+            <li><a href="https://ca-es.facebook.com/DistorsioTelecos/">Facebook</a></li>
           </ol>
         </div>
       </div>
