--- a/src/blog/static/blog/css/blog.css
+++ b/src/blog/static/blog/css/blog.css
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
 }
 
+a, a:hover{
+  color: green;
+}
+
 .display-4 {
   font-size: 2.5rem;
 }
@@ -61,15 +65,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-link {
+  color: green;
+}
+
+.nav-link:hover, .nav-link:active {
   color: #222222;
-}
-
-.nav-link:hover {
-  color: green;
-}
-
-.nav-link:active {
-  color: green;
 }
 
 
