--- a/src/blog/templates/blog/home.html
+++ b/src/blog/templates/blog/home.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 {% block precontent %}
   <!-- Main Featured -->
-  <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
-    <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">{{ featured_main.title }}</h1>
-      <h2 class=" fst-italic">{{ featured_main.subtitle }}</h2>
-      <p class="lead my-3">{{ featured_main.content | slice:"4:147" }}</p>
-      <p class="lead mb-0"><a href="{% url 'post-detail' pk=featured_main.pk %}" class="text-white fw-bold">Continue reading...</a></p>
+  <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark shadow"
+       style="background-image: url({{ featured_main.cover.url }}); ">
+    <div class="col px-0">
+      <h1 class="display-4 fst-italic" style="text-shadow: 2px 2px #000000; text-align: center;">
+        <a href="{% url 'post-detail' pk=featured_main.pk %}" class="invisible-link" >
+          {{ featured_main.title }}
+        </a>
+      </h1>
+      <h2 class=" fst-italic" style="text-shadow: 2px 2px #000000; text-align: center">
+        <a href="{% url 'post-detail' pk=featured_main.pk %}" class="invisible-link">
+          {{ featured_main.subtitle }}
+        </a>
+      </h2>
     </div>
   </div>
   <!-- End Main Featured -->
@@ -15,7 +22,7 @@
   <div class="row mb-2">
 
     <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-success">{{ featured_left.category }}</strong>
           <h3 class="mb-0">{{ featured_left.title }}</h3>
@@ -24,8 +31,7 @@
           <a href="{% url 'post-detail' pk=featured_left.pk %}" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+          <img class="bd-placeholder-img" src="{{ featured_left.thumbnail }}">
         </div>
       </div>
     </div>
@@ -40,7 +46,7 @@
           <a href="{% url 'post-detail' pk=featured_right.pk %}" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img class="bd-placeholder-img" src="{{ featured_right.thumbnail }}">
         </div>
       </div>
     </div>
