--- a/src/blog/static/blog/css/blog.css
+++ b/src/blog/static/blog/css/blog.css
@@ -32,12 +32,13 @@ a, a:hover{
   color: green;
 }
 
+
 .display-4 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
 }
 @media (min-width: 768px) {
   .display-4 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 }
 
@@ -106,6 +107,14 @@ a, a:hover{
 .blog-post-content {
     text-align: justify;
     text-justify: inter-word;
+}
+
+
+.blog-post-thumb img {
+    object-fit: none;
+    /*object-position: center; */
+    width: 250px;
+    height: 250px;
 }
 
 /*
