--- a/src/blog/templates/base.html
+++ b/src/blog/templates/base.html
@@ -115,8 +115,8 @@
         Bocamolls
       </a>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Envia bocamolls</a></li>
-        <li><a class="dropdown-item" href="#">Base de dades</a></li>
+        <li><a class="dropdown-item" href="{% url 'bocamoll-new' %}">Envia bocamolls</a></li>
+        <li><a class="dropdown-item" href="{% url 'bocamoll-filter' %}">Base de dades</a></li>
       </ul>
     </li>
 
@@ -136,15 +136,22 @@
   {% block precontent %}{% endblock %}
   <div class="row g-5">
     <div class="col-md-8">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert"">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
     {% block content %}{% endblock %}
     </div>
     <div class="col-md-4">
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
-          <h4 class="fst-italic">Bocamoll</h4>
-          <p class="mb-0">
-            Aquí hi haurà un bocamoll random
-          </p>
+          <strong class="d-inline-block mb-2 text-success">{{ bocamoll.subject }}</strong>
+          <h3 class="mb-3">{{ bocamoll.text }}</h3>
+          <div class="mb-1 text-muted">{{ bocamoll.professor }} el {{ bocamoll.date }}</div>
         </div>
 
         <div class="p-4">
